# Encrypto

./: Cargo.toml  LICENSE-APACHE.txt  LICENSE-MIT.txt  README.md  build.rs
.github/workflows/: rust.yml
src/: app.rs  lib.rs  main.rs  thread.rs
