[package]
name = "encrypto"
version = "0.1.0"
authors = ["Bombini"]
edition = "2021"
rust-version = "1.72"

[dependencies]
egui = "0.26.2"
eframe = { version = "0.26.2", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4.20"

# You only need serde if you want app persistence:
serde = { version = "1.0.197", features = ["derive"] }

env_logger = "0.11.2"
aes-gcm = "0.10.3"
sha2 = "0.11.0-pre.3"
egui-file-dialog = "0.3.1"

[profile.release]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[build-dependencies]
winres = "0.1.12"
